# api

./: .dockerignore  .gitignore  .pdm-python  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
config/: sample.json
scripts/: run_local_server.py
src/: __init__.py  app.py  models.py
src/auth/: auth_bearer.py  auth_handler.py
src/config/: config.py  models.py
src/data/supergrafos/: AIORA.geojson  ALBORS.geojson  BENIMACLET.geojson  BETERO.geojson  CAMI DE VERA.geojson  CAMI FONDO.geojson  CAMI REAL.geojson  CASTELLAR-L'OLIVERAL.geojson  CIUTAT FALLERA.geojson  CIUTAT JARDI.geojson  EL BOTANIC.geojson  EL CALVARI.geojson  EL GRAU.geojson  EL MERCAT.geojson  EL PLA DEL REMEI.geojson  ELS ORRIOLS.geojson  EN CORTS.geojson  EXPOSICIO.geojson  FAVARA.geojson  JAUME ROIG.geojson  L'AMISTAT.geojson  L'HORT DE SENABRE.geojson  L'ILLA PERDUDA.geojson  LA CREU COBERTA.geojson  LA CREU DEL GRAU.geojson  LA GRAN VIA.geojson  LA MALVA-ROSA.geojson  LA PETXINA.geojson  LA RAIOSA.geojson  LA ROQUETA.geojson  LA SEU.geojson  LA TORRE.geojson  LA VEGA BAIXA.geojson  LA XEREA.geojson  LES TENDETES.geojson  MARXALENES.geojson  MONTOLIVET.geojson  MORVEDRE.geojson  NATZARET.geojson  NOU MOLES.geojson  (+11 more)
src/lib/: barrio_graph.py  barrios.py  classification.py  coordinates.py  geojson.py  map.py  pdf2img.py
src/lib/models/: __init__.py  m1.py  m2.py
src/lib/models/common/: calculate_distances.py  calculate_time.py  context.py  types.py
